# routes/api.php
@@ -3,9 +3,9 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-use App\Http\Controllers\ProductController;
-use App\Http\Controllers\CartController;
-use App\Http\Controllers\CategoryController;
+use App\Http\Controllers\v1\ProductController;
+use App\Http\Controllers\v1\CartController;
+use App\Http\Controllers\v1\CategoryController;
 
 Route::group([
     'prefix' => 'products'
@@ -22,17 +22,14 @@ Route::group([
 Route::group([
     'prefix' => 'cart'
 ], function () {
-    Route::get('/', [CartController::class, 'show'])->name('cart-show');  
-    Route::post('/pay', [CartController::class, 'pay'])->name('cart-pay');  
+    Route::get('/show', [CartController::class, 'show'])->name('cart-show');  
+    Route::post('/confirm', [CartController::class, 'confirm'])->name('cart-confirm');  
     Route::post('/{product}/remove', [CartController::class, 'remove'])->name('cart-remove');  
-    Route::post('/{product}', [CartController::class, 'store'])->name('cart-store');  
-
-});     
-
-Route::group([
-    'prefix' => 'category'
-], function () {
-    Route::get('/', [CategoryController::class, 'index'])->name('category-index');  
-    Route::post('/{category}/changestatus', [CategoryController::class, 'changeStatus'])->name('category-changestatus');   
+    Route::post('/{product}/add', [CartController::class, 'store'])->name('cart-store');  
 
 });  
+
+
+Route::post('categories/{category}/changestatus', [CategoryController::class, 'changeStatus'])->name('categories-changestatus');   
+Route::apiResource('categories', CategoryController::class);
+
